{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 13,
  "lineage": "c2272e24-c35e-99e3-893b-f1ea2d8dcfc1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09b90e09742640522",
            "arn": "arn:aws:ec2:us-east-2:851725655418:instance/i-05271442c9c0dec87",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05271442c9c0dec87",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09e6e5d296fe31a8b",
            "private_dns": "ip-10-0-1-239.us-east-2.compute.internal",
            "private_ip": "10.0.1.239",
            "public_ip": "18.226.251.234",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01e4d062d0a3e8b06",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ef90de05829d306e",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cbd60413289f2441"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_parcial",
            "aws_subnet.public_1",
            "aws_vpc.vpc_parcial"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09b90e09742640522",
            "arn": "arn:aws:ec2:us-east-2:851725655418:instance/i-0c2b4218ea3a17caa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c2b4218ea3a17caa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03aaa684486f82a34",
            "private_dns": "ip-10-0-2-68.us-east-2.compute.internal",
            "private_ip": "10.0.2.68",
            "public_ip": "18.217.249.129",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d2574b5103cdf17f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-031b81416145e793b",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cbd60413289f2441"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_parcial",
            "aws_subnet.public_2",
            "aws_vpc.vpc_parcial"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw_parcial",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851725655418:internet-gateway/igw-0a5e3a556df1124e2",
            "id": "igw-0a5e3a556df1124e2",
            "owner_id": "851725655418",
            "tags": {
              "Name": "gw_parcial"
            },
            "tags_all": {
              "Name": "gw_parcial"
            },
            "vpc_id": "vpc-0699237c1da7e4a13"
          },
          "dependencies": [
            "aws_vpc.vpc_parcial"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_parcial",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851725655418:route-table/rtb-0cd6986ab1fc69ea0",
            "id": "rtb-0cd6986ab1fc69ea0",
            "owner_id": "851725655418",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a5e3a556df1124e2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_parcial"
            },
            "tags_all": {
              "Name": "rt_parcial"
            },
            "timeouts": null,
            "vpc_id": "vpc-0699237c1da7e4a13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw_parcial",
            "aws_vpc.vpc_parcial"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_test_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d484104b525b2b99",
            "route_table_id": "rtb-0cd6986ab1fc69ea0",
            "subnet_id": "subnet-0ef90de05829d306e"
          },
          "dependencies": [
            "aws_internet_gateway.gw_parcial",
            "aws_route_table.rt_parcial",
            "aws_subnet.public_1",
            "aws_vpc.vpc_parcial"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_test_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098d450d302970c96",
            "route_table_id": "rtb-0cd6986ab1fc69ea0",
            "subnet_id": "subnet-031b81416145e793b"
          },
          "dependencies": [
            "aws_internet_gateway.gw_parcial",
            "aws_route_table.rt_parcial",
            "aws_subnet.public_2",
            "aws_vpc.vpc_parcial"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_parcial",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851725655418:security-group/sg-0cbd60413289f2441",
            "description": "Grupo de seguridad",
            "egress": [],
            "id": "sg-0cbd60413289f2441",
            "ingress": [],
            "name": "sg_parcial",
            "name_prefix": "",
            "owner_id": "851725655418",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_parcial"
            },
            "tags_all": {
              "Name": "sg_parcial"
            },
            "timeouts": null,
            "vpc_id": "vpc-0699237c1da7e4a13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_parcial"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rsg_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1521279784",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cbd60413289f2441",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_parcial",
            "aws_vpc.vpc_parcial"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rsg_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-333005155",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cbd60413289f2441",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_parcial",
            "aws_vpc.vpc_parcial"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851725655418:subnet/subnet-0ef90de05829d306e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef90de05829d306e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725655418",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_public_1"
            },
            "tags_all": {
              "Name": "subnet_public_1"
            },
            "vpc_id": "vpc-0699237c1da7e4a13"
          },
          "dependencies": [
            "aws_vpc.vpc_parcial"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851725655418:subnet/subnet-031b81416145e793b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031b81416145e793b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725655418",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_public_2"
            },
            "tags_all": {
              "Name": "subnet_public_2"
            },
            "vpc_id": "vpc-0699237c1da7e4a13"
          },
          "dependencies": [
            "aws_vpc.vpc_parcial"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_parcial",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851725655418:vpc/vpc-0699237c1da7e4a13",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0374b7b929f6ddb17",
            "default_route_table_id": "rtb-0ead3c8d66f327339",
            "default_security_group_id": "sg-0db6a80f80c2111d2",
            "dhcp_options_id": "dopt-0a6bf43fb5e743b5e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0699237c1da7e4a13",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ead3c8d66f327339",
            "owner_id": "851725655418",
            "tags": {
              "Name": "vpc_parcial"
            },
            "tags_all": {
              "Name": "vpc_parcial"
            }
          }
        }
      ]
    }
  ]
}